@@ -25,6 +25,7 @@ ChangeLog
 [-] * FILES service can send smsbackup messages.
 [+] * Configurable outbox format for SMSD/FILES.
 [-] * Improve conversion of boolean settings from Python.
+[-] * Do not use MPBR/SPBR for other that phone memory (bug #1076).
     
 20091222 - 1.27.0
     
